istio-manifests/ingressGateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
     name: book-info-gateway
spec:
   selector: 
      istio: ingressgateway
   servers:
       - port:
           number: 80
           name: http2
           protocol: HTTP
         hosts:
          - "*"
